# anjab-abk-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: release.yml  test.yml
src/anjab_abk_mcp/: __init__.py  __main__.py  asgi.py  auth_provider.py  client.py  config.py  m2m.py  server.py
tests/: test_asgi.py  test_auth.py  test_client.py  test_config.py  test_m2m.py  test_server.py
