[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anjab-abk-mcp"
dynamic = ["version"]
description = "MCP Server untuk ANJAB (Analisis Jabatan) dan ABK (Analisis Beban Kerja) yayasan pendidikan."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cakrawala Tumbuh", email = "dev@cakrawala.id" }]
keywords = ["mcp", "fastmcp", "anjab", "abk", "analisis-jabatan", "beban-kerja"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27",
  "pydantic-settings>=2.0",
  "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/cakrawala-tumbuh/anjab-abk-mcp"
Repository = "https://github.com/cakrawala-tumbuh/anjab-abk-mcp"
Issues = "https://github.com/cakrawala-tumbuh/anjab-abk-mcp/issues"

[project.scripts]
anjab-abk-mcp = "anjab_abk_mcp.__main__:main"

[tool.hatch.version]
path = "src/anjab_abk_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/anjab_abk_mcp"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
